# MCByteTrack

./: CMakeLists.txt  README.md
include/: BYTETracker.h
src/: BYTETracker.cpp  main.cpp
